[package]
name = "acerbus-client"
version = "0.1.0"
edition = "2021"
default-run = "acerbus-client"

[dependencies]
acerbus-common = { path = "../acerbus-common" }
bevy = "0.7.0"
bevy_asset_loader = "0.11.0"
bevy_renet = "0.0.4"
bincode = "1.3.3"
serde = { version = "1.0.140", features = ["derive"] }
